Fix mobile layout bug on Services page

--- a/css/index.css
+++ b/css/index.css
@@ -210,9 +210,8 @@ header .menu a {
 header .menu a:hover {
   color: #222222;
 }
-.menu--open {
+.menu-open {
   width: 100%;
-  max-width: 1024px;
   height: 100vh;
   display: flex !important;
   flex-direction: column;
@@ -474,6 +473,13 @@ header .menu a:hover {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width:500px) {
+  .services .tab-navigator .tabs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 .services .tab-navigator .tabs .tab {
   border: 1px solid #222222;
   width: 185px;
@@ -481,6 +487,12 @@ header .menu a:hover {
   text-align: center;
   font-size: 2rem;
   font-weight: bold;
+}
+@media (max-width:500px) {
+  .services .tab-navigator .tabs .tab {
+    width: 90%;
+    margin: 10px;
+  }
 }
 .services .tab-navigator .tabs .tab:hover {
   background: #222222;
@@ -492,6 +504,11 @@ header .menu a:hover {
 }
 .services .tab-navigator .tabs-container {
   margin: 50px 0 60px 0;
+}
+@media (max-width:500px) {
+  .services .tab-navigator .tabs-container {
+    width: 90%;
+  }
 }
 .services .tab-navigator .tabs-container .tab-content {
   display: none;
@@ -507,6 +524,11 @@ header .menu a:hover {
 }
 .services .tab-navigator .tabs-container .tab-content .tab-text {
   width: 50%;
+}
+@media (max-width:500px) {
+  .services .tab-navigator .tabs-container .tab-content .tab-text {
+    width: 100%;
+  }
 }
 .services .tab-navigator .tabs-container .tab-content .tab-text p {
   line-height: 2.6rem;
