--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,6 +13,7 @@ header {
 		align-items: center;
 		width: 100%;
 		padding: 13px 8%;
+
 		@media (@mobile) {
 			padding: 13px 5%;
 		}
@@ -46,9 +47,8 @@ header {
 	}
 }
 
-.menu--open {
+.menu-open {
 	width: 100%;
-	max-width: 1024px;
 	height: 100vh;
 	display: flex !important;
 	flex-direction: column;
