--- a/less/services.less
+++ b/less/services.less
@@ -61,6 +61,12 @@
 			display: flex;
 			justify-content: space-between;
 
+			@media (@mobile) {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+			}
+
 			.tab {
 				border: 1px solid #222222;
 				width: 185px;
@@ -68,6 +74,11 @@
 				text-align: center;
 				font-size: 2rem;
 				font-weight: bold;
+
+				@media (@mobile) {
+					width: 90%;
+					margin: 10px;
+				}
 
 				&:hover {
 					background: #222222;
@@ -84,6 +95,10 @@
 		.tabs-container {
 			margin: 50px 0 60px 0;
 
+			@media (@mobile) {
+				width: 90%;
+			}
+			
 			.tab-content {
 				display: none;
 				flex-direction: row;
@@ -99,6 +114,10 @@
 
 				.tab-text {
 					width: 50%;
+
+					@media (@mobile) {
+						width: 100%;
+					}
 
 					p {
 						line-height: 2.6rem;
